Revision history for {{$dist->name}}

{{$NEXT}}

0.01011501 2010-12-20 02:15:59 Pacific/Auckland

          The method we were borrowing out of Carp wasn't there in old versions,
          so we've added a bit of magic to try get it from older carps too, so we don't fail
          on <= 5.10.1 :(
          
          Changes                      |   11 +++++++++++
          lib/Data/Handle/Exception.pm |   17 +++++++++++++----
          2 files changed, 24 insertions(+), 4 deletions(-)


0.01011500 2010-12-20 01:36:06 Pacific/Auckland
          More tests to improve general function coverage

          generate_exception is gone, depercated. Replace:

            generate_exception($class , $message)->throw()

          with

            _gen_tree($full_class)->throw( $message )

          Coverage testing detected a missing exception class, fixed in this release.

          All tied() methods now tested to some degree to work.

          Changes                      |   23 ++++
          lib/Data/Handle/Exception.pm |   40 +------
          t/02_example.t               |   23 ++++
          t/03_mess_with_seek.t        |   28 ++++
          t/04_things_that_fail.t      |  300 ++++++++++++++++++++++++++++++++++++++++++
          5 files changed, 376 insertions(+), 38 deletions(-)


0.01011421 2010-12-19 22:52:17 Pacific/Auckland
          Reworked the Exception code to be cleaner at the cost of a slight
          initialisatin cost.

          Reworked code bodies to unify seek/tell calls as _restore_pos and _set_pos.

          Added _fh so internal code is less confusing.

          Extended tests to cover more scenarios.

          Added contributed suggestions as "alternative_techinques" with demonstrations how they
          *( so far ) don't work. If people can get them to work (on all perls), that'd be great!.
          ( Seems there are many weird fdup bugs in perl )
